--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+# Current htaccess rules also take care of disallowing .git folder and any other sensitive files such as .sql
 Header set Access-Control-Allow-Origin *
 <IfModule mod_rewrite.c>
 Options +FollowSymLinks
